--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -3,28 +3,26 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Magic | Bikcraft</title>
-  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
-
-  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
-
-  <link href="../css/style.css" rel="preload" as="style">
-  <link href="../css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="shortcut icon" href="../favicon.svg" type="image/x-icon">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@500;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
+  <title>Magic Might - Bikcraft</title>
+  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+
 </head>
 
 <body id="bicicleta">
   <header class="header-bg">
     <div class="header container">
-      <a href="../">
-        <img src="../img/bikcraft.svg" alt="Bikcraft" width="136" height="32">
-      </a>
+      <a href="../"><img src="../img/bikcraft.svg" alt="Bikcraft"></a>
       <nav aria-label="primaria">
-        <ul class="header-menu font-1-m cor-0">
+        <ul class="header-menu cor-0 font-1-m">
           <li><a href="../bicicletas.html">Bicicletas</a></li>
           <li><a href="../seguros.html">Seguros</a></li>
           <li><a href="../contato.html">Contato</a></li>
@@ -33,114 +31,125 @@
     </div>
   </header>
 
-  <main class="bicicleta-bg">
-    <div class="bicicleta container">
-      <div class="bicicleta-titulo">
-        <span class="font-2-xl cor-5">R$ 4999</span>
-        <h1 class="font-1-xxl cor-0">Magic Might<span class="cor-p1">.</span></h1>
+  <main class="titulo-bg">
+    <div>
+      <div class="titulo container">
+        <p class="cor-5 font-2-xl">R$ 2499</p>
+        <h1 class="font-1-xxl cor-0">Magic <span class="now-rap">Might <span class="cor-p1">.</span></h1></span>
       </div>
-      <div class="bicicleta-imagens">
-        <img src="../img/bicicleta/nimbus2.jpg" alt="Bicicleta preta" width="560" height="440">
-        <img src="../img/bicicleta/nimbus1.jpg" alt="Bicicleta preta" width="560" height="440">
-        <img src="../img/bicicleta/nimbus3.jpg" alt="Bicicleta branca" width="560" height="440">
+    </div>
+
+    <div class="bicicleta container">
+      <div class="bicicleta-img">
+        <img src="../img/bicicleta/nimbus2.jpg" alt="bicicleta bikcraft preta nimbus">
+        <img src="../img/bicicleta/nimbus1.jpg" alt="bicicleta bikcraft preta nimbus">
+        <img src="../img/bicicleta/nimbus3.jpg" alt="bicicleta bikcraft preta nimbus">
       </div>
       <div class="bicicleta-conteudo">
         <p class="font-2-l cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-        <div class="bicicleta-comprar">
-          <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=magic">Comprar Agora</a>
-          <span class="font-1-xs cor-6"><img src="../img/icones/entrega.svg" alt=""> entrega em 5 dias</span>
-          <span class="font-1-xs cor-6"><img src="../img/icones/estoque.svg" alt=""> 18 em estoque</span>
+        <div class="comprar">
+          <a class="botao" href="../orcamento.html">COMPRAR AGORA</a>
+          <div class="span-info cor-6 font-1-xs">
+            <span><img src="../img/icones/entrega.svg" alt="">entrega em 5 dias</span>
+            <span><img src="../img/icones/estoque.svg" alt="">18 em estoque</span>
+          </div>
         </div>
         <h2 class="font-1-xs cor-0">Informações</h2>
-        <ul class="bicicleta-informacoes">
-          <li>
+        <div class="tecnologia-vantagens bicicleta-info">
+          <div>
             <img src="../img/icones/eletrica.svg" alt="">
             <h3 class="font-1-m cor-0">Motor Elétrico</h3>
-            <p class="font-2-xs cor-5">Permite você viajar distâncias inimaginaveis com a sua bike.</p>
-          </li>
-          <li>
+            <p class="font-2-s cor-5">Permite você viajar distâncias inimaginaveis com a sua bike.</p>
+          </div>
+          <div>
             <img src="../img/icones/velocidade.svg" alt="">
-            <h3 class="font-1-m cor-0">45 km/h</h3>
-            <p class="font-2-xs cor-5">A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-          </li>
-          <li>
+            <h3 class="font-1-m cor-0">30 km/h</h3>
+            <p class="font-2-s cor-5">A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+          </div>
+          <div>
             <img src="../img/icones/rastreador.svg" alt="">
             <h3 class="font-1-m cor-0">Rastreador</h3>
-            <p class="font-2-xs cor-5">Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-          </li>
-          <li>
+            <p class="font-2-s cor-5">Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+          </div>
+          <div>
             <img src="../img/icones/carbono.svg" alt="">
             <h3 class="font-1-m cor-0">Fibra de Carbono</h3>
-            <p class="font-2-xs cor-5">Maior proteção possível para a sua Bikcraft com fibra de carbono.</p>
-          </li>
-        </ul>
-        <h2 class="font-1-xs cor-0">Ficha Técnica</h2>
-        <ul class="bicicleta-ficha font-2-s cor-4">
-          <li>Peso <span>9 kg</span></li>
-          <li>Altura <span>60 cm</span></li>
-          <li>Largura <span>120 cm</span></li>
-          <li>Profundidade <span>10 cm</span></li>
-          <li>Marchas <span>16</span></li>
-          <li>Roda <span>29</span></li>
-        </ul>
+            <p class="font-2-s cor-5">Maior proteção possível para a sua Bikcraft com fibra de carbono.</p>
+          </div>
+        </div>
+
+        <div>
+          <h2 class="font-1-xs cor-0">FICHA TÉCNICA</h2>
+          <ul class="bicicleta-ficha font-2-s cor-4">
+            <li>Peso<span>9 kg</span></li>
+            <li>Altura<span>60 cm</span></li>
+            <li>Largura<span>120 cm</span></li>
+            <li>Profundidade<span>10 cm</span></li>
+            <li>Marchas<span>16</span></li>
+            <li>Roda<span>29</span></li>
+          </ul>
+        </div>
       </div>
     </div>
   </main>
 
   <article class="bicicletas-lista container">
-    <h2 class="font-1-xxl">outras bicicletas<span class="cor-p1">.</span></h2>
+    <h2 class="font-1-xxl cor-11">escolha a sua<span class="cor-p1">.</span></h2>
     <ul>
       <li>
-        <a href="./nimbus.html">
-          <img src="../img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
-          <h3 class="font-1-xl">Nimbus Stark</h3>
+        <a href="nimbus.html">
+          <img src="../img/bicicletas/nimbus.jpg" alt=" Bicicleta preta">
+          <h3 class="font-1-xl cor-11">Nimbus Stark</h3>
           <span class="font-2-m cor-8">R$ 4999</span>
         </a>
       </li>
+
       <li>
-        <a href="./nebula.html">
-          <img src="../img/bicicletas/nebula.jpg" alt="Bicicleta branca">
-          <h3 class="font-1-xl">Nebula Cosmic</h3>
+        <a href="nebula.html">
+          <img src="../img/bicicletas/nebula.jpg" alt=" Bicicleta preta">
+          <h3 class="font-1-xl cor-11">Nebula Cosmic</h3>
           <span class="font-2-m cor-8">R$ 3999</span>
         </a>
       </li>
+
     </ul>
   </article>
 
   <article class="seguro-bg">
     <div class="seguro container">
-      <div class="seguro-imagem">
-        <img src="../img/fotos/seguros.jpg" alt="Pessoa parada em cima de uma bicicleta">
+      <div class="seguro-img">
+        <img src="../img/fotos/seguros.jpg" alt="">
       </div>
       <div class="seguro-conteudo">
-        <h2 class="font-1-xxl cor-0">Pedale mais tranquilo com o nosso <span class="cor-p1">seguro.</span></h2>
+        <h2 class="font-1-xxl cor-0">Pedale mais
+          tranquilo com o nosso<span class="cor-p1"> seguro.</span></h2>
         <p class="font-2-l cor-5">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
-        <a class="botao" href="../seguros.html">Conheça Mais</a>
+        <a class="botao" href="../seguros.html">CONHEÇA MAIS</a>
       </div>
     </div>
   </article>
 
   <footer class="footer-bg">
-    <div class="footer container">
+    <div class="container footer">
       <img src="../img/bikcraft.svg" alt="Bikcraft">
-      <div class="footer-contato">
-        <h3 class="font-2-l-b cor-0">Contato</h3>
-        <ul class="font-2-m cor-5">
-          <li>+55 21 9999-9999</li>
-          <li>contato@bikcraft.com</li>
-          <li>Rua Ali Perto, 42 - Botafogo</li>
-          <li>Rio de Janeiro - RJ</li>
+      <div>
+        <h2 class="font-2-l-b cor-0">CONTATO</h2>
+        <ul class="cor-5 font-2-s footer-contato">
+          <li><a href="tel:+55 48 9999-9999">+55 48 9999-9999</a></li>
+          <li><a href="mailto:dev.juliocezar@gmail.com">dev.juliocezar@gmail.com</a></li>
+          <li>Rua Ali Perto, 42 - Jurerê</li>
+          <li>Florianópolis - SC</li>
+          <li><a href="https://www.instagram.com/juliocezar_oj/?theme=dark" target="_blank"><img src="../img/redes/instagram.svg" alt="instagram"></a>
+            <a href="https://www.facebook.com/julio.cezar.71619" target="_blank"><img src="../img/redes/facebook.svg" alt="Facebook"></a>
+            <img src="../img/redes/youtube.svg" alt="youtube">
+          </li>
         </ul>
-        <div class="footer-redes">
-          <a href="./"><img src="../img/redes/instagram.svg" alt="Instagram"></a>
-          <a href="./"><img src="../img/redes/facebook.svg" alt="Facebook"></a>
-          <a href="./"><img src="../img/redes/youtube.svg" alt="Youtube"></a>
-        </div>
       </div>
-      <div class="footer-informacoes">
-        <h3 class="font-2-l-b cor-0">Informações</h3>
+
+      <div>
+        <h2 class="font-2-l-b cor-0">INFORMAÇÕES</h2>
         <nav>
-          <ul class="font-1-m cor-5">
+          <ul class="cor-5 font-1-m footer-info">
             <li><a href="../bicicletas.html">Bicicletas</a></li>
             <li><a href="../seguros.html">Seguros</a></li>
             <li><a href="../contato.html">Contato</a></li>
@@ -148,11 +157,9 @@
           </ul>
         </nav>
       </div>
-      <p class="font-2-m cor-6 footer-copy">Bikcraft © Alguns direitos reservados.</p>
+      <p class="cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
-
-  <script src="../js/script.js"></script>
 </body>
 
 </html>
