--- a/termos.html
+++ b/termos.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +35,7 @@
     <div  class="titulo-bg">
       <div class="titulo container">
         <p class="cor-5 font-2-l-b">termos de uso</p>
-        <h1 class="font-1-xxl cor-0">termos e <span class="now-rap">condições <span class="cor-p1">.</span></h1></span>
+        <h1 class="font-1-xxl cor-0">termos e <span class="now-rap">condições<span class="cor-p1">.</span></h1></span>
       </div>
     </div>
 
