--- a/bicicletas.html
+++ b/bicicletas.html
@@ -139,10 +139,10 @@
       <div>
         <h2 class="font-2-l-b cor-0">CONTATO</h2>
         <ul class="cor-5 font-2-s footer-contato">
-          <li><a href="tel:+55 48 9999-9999">+55 48 9999-9999</a></li>
+          <li><a href="tel:+55 48 9999-9999">+55 21 9999-9999</a></li>
           <li><a href="mailto:dev.juliocezar@gmail.com">dev.juliocezar@gmail.com</a></li>
-          <li>Rua Ali Perto, 42 - Jurerê</li>
-          <li>Florianópolis - SC</li>
+          <li>Rua Ali Perto, 42 - Botafogo</li>
+          <li>Rio de Janeiro - RJ</li>
           <li><a href="https://www.instagram.com/juliocezar_oj/?theme=dark" target="_blank"><img src="img/redes/instagram.svg" alt="instagram"></a>
             <a href="https://www.facebook.com/julio.cezar.71619" target="_blank"><img src="img/redes/facebook.svg" alt="Facebook"></a>
             <img src="img/redes/youtube.svg" alt="youtube">
