--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -123,8 +123,8 @@
       <div class="seguro-conteudo">
         <h2 class="font-1-xxl cor-0">Pedale mais
           tranquilo com o nosso<span class="cor-p1"> seguro.</span></h2>
-          <p class="font-2-l cor-5">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
-          <a class="botao" href="../seguros.html">CONHEÇA MAIS</a>
+        <p class="font-2-l cor-5">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
+        <a class="botao" href="../seguros.html">CONHEÇA MAIS</a>
       </div>
     </div>
   </article>
@@ -135,10 +135,10 @@
       <div>
         <h2 class="font-2-l-b cor-0">CONTATO</h2>
         <ul class="cor-5 font-2-s footer-contato">
-          <li><a href="tel:+55 48 9999-9999">+55 48 9999-9999</a></li>
+          <li><a href="tel:+55 48 9999-9999">+55 21 9999-9999</a></li>
           <li><a href="mailto:dev.juliocezar@gmail.com">dev.juliocezar@gmail.com</a></li>
-          <li>Rua Ali Perto, 42 - Jurerê</li>
-          <li>Florianópolis - SC</li>
+          <li>Rua Ali Perto, 42 - Botafogo</li>
+          <li>Rio de Janeiro - RJ</li>
           <li><a href="https://www.instagram.com/juliocezar_oj/?theme=dark" target="_blank"><img src="../img/redes/instagram.svg" alt="instagram"></a>
             <a href="https://www.facebook.com/julio.cezar.71619" target="_blank"><img src="../img/redes/facebook.svg" alt="Facebook"></a>
             <img src="../img/redes/youtube.svg" alt="youtube">
