--- a/contato.html
+++ b/contato.html
@@ -32,87 +32,87 @@
   </header>
 
   <main>
-    <div  class="titulo-bg">
+    <div class="titulo-bg">
       <div class="titulo container">
         <p class="cor-5 font-2-l-b">respostas em até 24h</p>
         <h1 class="font-1-xxl cor-0">nosso <span class="now-rap">contato<span class="cor-p1">.</span></h1></span>
       </div>
     </div>
 
-      <div class="contato container">
-       <section class="contato-dados" aria-label="Endereço">
-          <h2 class="font-1-m cor-0">Loja Online</h2>
-          <div class="contato-endereco font-2-s cor-4">
-            <p>Rua Ali Perto, 35</p>
-            <p>Rio de Janeiro - RJ</p>
-            <p>rasil - Terra - Vita Láctea</p>
+    <div class="contato container">
+      <section class="contato-dados" aria-label="Endereço">
+        <h2 class="font-1-m cor-0">Loja Online</h2>
+        <div class="contato-endereco font-2-s cor-4">
+          <p>Rua Ali Perto, 35</p>
+          <p>Rio de Janeiro - RJ</p>
+          <p>rasil - Terra - Vita Láctea</p>
+        </div>
+
+        <address class="contato-meios font-2-s cor-4">
+          <a href="mailto:vendas@bikcraft.com">vendas@bikcraft.com</a>
+          <a href="mailto:assistencia@bikcraft.com">assistencia@bikcraft.com</a>
+          <a href="tel:+55 48 9999-9999">+55 48 9999-9999</a>
+        </address>
+
+        <div class="contato-redes">
+          <a href="https://www.instagram.com/juliocezar_oj/?theme=dark" target="_blank"><img src="img/redes/instagram-p.svg" alt="instagram"></a>
+          <a href="https://www.facebook.com/julio.cezar.71619" target="_blank"><img src="img/redes/facebook-p.svg" alt="Facebook"></a>
+          <img src="img/redes/youtube-p.svg" alt="youtube">
+        </div>
+      </section>
+
+      <section class="contato-form" aria-label="Formulário">
+        <form class="form" action="./contato.html">
+          <div>
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" name="nome" placeholder="Seu nome">
           </div>
 
-          <address class="contato-meios font-2-s cor-4">
-            <a href="mailto:vendas@bikcraft.com">vendas@bikcraft.com</a>
-            <a href="mailto:assistencia@bikcraft.com">assistencia@bikcraft.com</a>
-            <a href="tel:+55 48 9999-9999">+55 48 9999-9999</a>
-          </address>
-  
-          <div class="contato-redes">
-            <a href="https://www.instagram.com/juliocezar_oj/?theme=dark" target="_blank"><img src="img/redes/instagram-p.svg" alt="instagram"></a>
-              <a href="https://www.facebook.com/julio.cezar.71619" target="_blank"><img src="img/redes/facebook-p.svg" alt="Facebook"></a>
-              <img src="img/redes/youtube-p.svg" alt="youtube">
+          <div>
+            <label for="telefone">Telefone</label>
+            <input type="text" id="telefone" name="telefone" placeholder="(48) 9999-9999">
           </div>
-        </section>
 
-        <section class="contato-form" aria-label="Formulário">
-          <form class="form" action="./contato.html">
-            <div>
-              <label for="nome">Nome</label>
-              <input type="text" id="nome" name="nome" placeholder="Seu nome">
-            </div>
+          <div class="col-2">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="contato@email.com">
+          </div>
 
-            <div>
-              <label for="telefone">Telefone</label>
-              <input type="text" id="telefone" name="telefone" placeholder="(48) 9999-9999">
-            </div>
+          <div class="col-2">
+            <label for="mensagem">Mensagem</label>
+            <textarea name="mensagem" id="mensagem" rows="5" placeholder="O que você precisa ?"></textarea>
+          </div>
 
-            <div class="col-2">
-              <label for="email">Email</label>
-              <input type="email" id="email" name="email" placeholder="contato@email.com">
-            </div>
-
-            <div class="col-2">
-              <label for="mensagem">Mensagem</label>
-              <textarea name="mensagem" id="mensagem" rows="5" placeholder="O que você precisa ?"></textarea>
-            </div>
-
-            <button class="botao">ENVIAR MENSAGEM</button>
-          </form>
-        </section>
-      </div>
+          <button class="botao">ENVIAR MENSAGEM</button>
+        </form>
+      </section>
+    </div>
   </main>
 
   <article class="lojas container">
     <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
     <div class="lojas-conteudo">
-        <img src="img/lojas/rj.jpg" alt="Mapa marcando o Endereço em Rua Ali Perto, 25">
-        <div class="local">
-          <h3 class="font-1-xl">Rio de Janeiro</h3>
-          <div class="font-2-s cor-8 lojas-dados">
-            <p>Rua Ali Perto, 25</p>
-            <p>Rio de Janeiro - RJ</p>
-          </div>
-
-          <div class="font-2-s cor-8 lojas-dados">
-            <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
-            <a href="tel:+55 21 9999-9999">21 9999-9999</a>
-          </div>
-
-          <div class="horario font-1-xs">
-            <img src="img/icones/horario.svg" alt="">
-            <p>08-18h de seg à dom</p>
-          </div>
+      <img src="img/lojas/rj.jpg" alt="Mapa marcando o Endereço em Rua Ali Perto, 25">
+      <div class="local">
+        <h3 class="font-1-xl">Rio de Janeiro</h3>
+        <div class="font-2-s cor-8 lojas-dados">
+          <p>Rua Ali Perto, 25</p>
+          <p>Rio de Janeiro - RJ</p>
         </div>
+
+        <div class="font-2-s cor-8 lojas-dados">
+          <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
+          <a href="tel:+55 21 9999-9999">21 9999-9999</a>
+        </div>
+
+        <div class="horario font-1-xs">
+          <img src="img/icones/horario.svg" alt="">
+          <p>08-18h de seg à dom</p>
+        </div>
+      </div>
     </div>
 
-    <div  class="lojas-conteudo">
+    <div class="lojas-conteudo">
       <img src="img/lojas/sp.jpg" alt="Mapa marcando o Endereço em Rua Ali Perto, 25">
       <div class="local">
         <h3 class="font-1-xl">São Paulo</h3>
@@ -131,7 +131,7 @@
           <p>08-18h de seg à dom</p>
         </div>
       </div>
-  </div>
+    </div>
   </article>
 
   <footer class="footer-bg">
@@ -140,10 +140,10 @@
       <div>
         <h2 class="font-2-l-b cor-0">CONTATO</h2>
         <ul class="cor-5 font-2-s footer-contato">
-          <li><a href="tel:+55 48 9999-9999">+55 48 9999-9999</a></li>
+          <li><a href="tel:+55 48 9999-9999">+55 21 9999-9999</a></li>
           <li><a href="mailto:dev.juliocezar@gmail.com">dev.juliocezar@gmail.com</a></li>
-          <li>Rua Ali Perto, 42 - Jurerê</li>
-          <li>Florianópolis - SC</li>
+          <li>Rua Ali Perto, 42 - Botafogo</li>
+          <li>Rio de Janeiro - RJ</li>
           <li><a href="https://www.instagram.com/juliocezar_oj/?theme=dark" target="_blank"><img src="img/redes/instagram.svg" alt="instagram"></a>
             <a href="https://www.facebook.com/julio.cezar.71619" target="_blank"><img src="img/redes/facebook.svg" alt="Facebook"></a>
             <img src="img/redes/youtube.svg" alt="youtube">
