--- a/termos.html
+++ b/termos.html
@@ -32,7 +32,7 @@
   </header>
 
   <main>
-    <div  class="titulo-bg">
+    <div class="titulo-bg">
       <div class="titulo container">
         <p class="cor-5 font-2-l-b">termos de uso</p>
         <h1 class="font-1-xxl cor-0">termos e <span class="now-rap">condições<span class="cor-p1">.</span></h1></span>
@@ -49,7 +49,7 @@
       <p>2.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
       <p>2.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
       <p>2.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-  
+
       <h2 class="font-1-l cor-11">3. Seguro Bikcraft</h2>
       <p>3.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
       <p>3.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
@@ -63,10 +63,10 @@
       <div>
         <h2 class="font-2-l-b cor-0">CONTATO</h2>
         <ul class="cor-5 font-2-s footer-contato">
-          <li><a href="tel:+55 48 9999-9999">+55 48 9999-9999</a></li>
+          <li><a href="tel:+55 48 9999-9999">+55 21 9999-9999</a></li>
           <li><a href="mailto:dev.juliocezar@gmail.com">dev.juliocezar@gmail.com</a></li>
-          <li>Rua Ali Perto, 42 - Jurerê</li>
-          <li>Florianópolis - SC</li>
+          <li>Rua Ali Perto, 42 - Botafogo</li>
+          <li>Rio de Janeiro - RJ</li>
           <li><a href="https://www.instagram.com/juliocezar_oj/?theme=dark" target="_blank"><img src="img/redes/instagram.svg" alt="instagram"></a>
             <a href="https://www.facebook.com/julio.cezar.71619" target="_blank"><img src="img/redes/facebook.svg" alt="Facebook"></a>
             <img src="img/redes/youtube.svg" alt="youtube">
