--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +21,7 @@
 <body>
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu cor-0 font-1-m">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -38,9 +39,12 @@
         <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="botao" href="./bicicletas.html">ESCOLHA A SUA</a>
       </div>
-      <div>
-        <img src="img/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
-      </div>
+
+      <picture>
+        <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg">
+        <img src="img/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta.">
+      </picture>
+
     </div>
   </main>
 
@@ -49,7 +53,7 @@
     <ul>
       <li>
         <a href="./bicicletas/magic.html">
-          <img src="img/bicicletas/magic-home.jpg" alt=" Bicicleta preta">
+          <img src="img/bicicletas/magic-home.jpg" width="920" height="1040" alt=" Bicicleta preta">
           <h3 class="font-1-xl cor-11">Magic Might</h3>
           <span class="font-2-m cor-8">R$ 2499</span>
         </a>
@@ -57,7 +61,7 @@
 
       <li>
         <a href="./bicicletas/nimbus.html">
-          <img src="img/bicicletas/nimbus-home.jpg" alt=" Bicicleta preta">
+          <img src="img/bicicletas/nimbus-home.jpg" width="920" height="1040" alt=" Bicicleta preta">
           <h3 class="font-1-xl cor-11">Nimbus Stark</h3>
           <span class="font-2-m cor-8">R$ 4999</span>
         </a>
@@ -65,7 +69,7 @@
 
       <li>
         <a href="./bicicletas/nebula.html">
-          <img src="img/bicicletas/nebula-home.jpg" alt=" Bicicleta preta">
+          <img src="img/bicicletas/nebula-home.jpg" width="920" height="1040" alt=" Bicicleta preta">
           <h3 class="font-1-xl cor-11">Nebula Cosmic</h3>
           <span class="font-2-m cor-8">R$ 3999</span>
         </a>
@@ -83,19 +87,19 @@
         <a class="botao" href="./bicicletas.html">ESCOLHA UM MODELO</a>
         <div class="tecnologia-vantagens">
           <div>
-            <img src="img/icones/eletrica.svg" alt="">
+            <img src="img/icones/eletrica.svg" width="24" height="24" alt="">
             <h3 class="font-1-m cor-0">Motor Elétrico</h3>
             <p class="font-2-s cor-5">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
           </div>
           <div>
-            <img src="img/icones/rastreador.svg" alt="">
+            <img src="img/icones/rastreador.svg" width="24" height="24" alt="">
             <h3 class="font-1-m cor-0">Rastreador</h3>
             <p class="font-2-s cor-5">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
           </div>
         </div>
       </div>
       <div class="tecnologia-img">
-        <img src="img/fotos/tecnologia.jpg" alt="">
+        <img src="img/fotos/tecnologia.jpg" width="1200" height="1920" alt="">
       </div>
     </div>
   </article>
@@ -103,19 +107,20 @@
   <section class="parceiros" aria-label="Nossos Parceiros">
     <h2 class="font-1-xxl cor-11 container">nossos parceiros<span class="cor-p1">.</span></h2>
     <ul>
-      <li><img src="img/parceiros/caravan.svg" alt=""></li>
-      <li><img src="img/parceiros/ranek.svg" alt=""></li>
-      <li><img src="img/parceiros/handel.svg" alt=""></li>
-      <li><img src="img/parceiros/dogs.svg" alt=""></li>
-      <li><img src="img/parceiros/lescone.svg" alt=""></li>
-      <li><img src="img/parceiros/flexblog.svg" alt=""></li>
-      <li><img src="img/parceiros/wildbeast.svg" alt=""></li>
-      <li><img src="img/parceiros/surfbot.svg" alt=""></li>
+      <li><img src="./img/parceiros/caravan.svg" alt="Caravan" width="140" height="38"></li>
+      <li><img src="./img/parceiros/ranek.svg" alt="Ranek" width="149" height="36"></li>
+      <li><img src="./img/parceiros/handel.svg" alt="Handel" width="140" height="50"></li>
+      <li><img src="./img/parceiros/dogs.svg" alt="Dogs" width="152" height="39"></li>
+      <li><img src="./img/parceiros/lescone.svg" alt="LeScone" width="208" height="41"></li>
+      <li><img src="./img/parceiros/flexblog.svg" alt="FlexBlog" width="165" height="38"></li>
+      <li><img src="./img/parceiros/wildbeast.svg" alt="Wildbeast" width="196" height="34"></li>
+      <li><img src="./img/parceiros/surfbot.svg" alt="Surfbot" width="200" height="49"></li>
     </ul>
   </section>
 
   <section class="depoimento" aria-label="depoimento">
-    <div><img src="img/fotos/depoimento.jpg" alt="Mulher andando de Bicicleta">
+    <div>
+      <img src="./img/fotos/depoimento.jpg" width="1560" height="1360" alt="Pessoa pedalando uma bicicleta Bikcraft">
     </div>
     <div class="depoimento-conteudo">
       <blockquote>
@@ -159,7 +164,7 @@
 
   <footer class="footer-bg">
     <div class="container footer">
-      <img src="img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div>
         <h2 class="font-2-l-b cor-0">CONTATO</h2>
         <ul class="cor-5 font-2-s footer-contato">
@@ -167,9 +172,14 @@
           <li><a href="mailto:dev.juliocezar@gmail.com">dev.juliocezar@gmail.com</a></li>
           <li>Rua Ali Perto, 42 - Botafogo</li>
           <li>Rio de Janeiro - RJ</li>
-          <li><a href="https://www.instagram.com/juliocezar_oj/?theme=dark" target="_blank"><img src="img/redes/instagram.svg" alt="instagram"></a>
-            <a href="https://www.facebook.com/julio.cezar.71619" target="_blank"><img src="img/redes/facebook.svg" alt="Facebook"></a>
-            <img src="img/redes/youtube.svg" alt="youtube">
+          <li>
+            <a href="https://www.instagram.com/juliocezar_oj/?theme=dark" target="_blank">
+              <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram"></a>
+
+            <a href="https://www.facebook.com/julio.cezar.71619" target="_blank">
+              <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook">
+            </a>
+            <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube">
           </li>
         </ul>
       </div>
