otimizado para produção

--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/style.min.css">
+  <link rel="preload" href="../css/style.min.css" as="style">
   <link rel="shortcut icon" href="../favicon.svg" type="image/x-icon">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,6 +16,7 @@
   <title>Nebula Cosmic - Bikcraft</title>
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
 
+  <script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body id="bicicleta">
@@ -41,14 +43,14 @@
 
     <div class="bicicleta container">
       <div class="bicicleta-img">
-        <img src="../img/bicicleta/nimbus3.jpg" alt="bicicleta bikcraft preta nimbus">
-        <img src="../img/bicicleta/nimbus1.jpg" alt="bicicleta bikcraft preta nimbus">
-        <img src="../img/bicicleta/nimbus2.jpg" alt="bicicleta bikcraft preta nimbus">
+        <img src="../img/bicicleta/nimbus3.jpg" alt="bicicleta bikcraft branca Nebula">
+        <img src="../img/bicicleta/nimbus1.jpg" alt="bicicleta bikcraft branca Nebula">
+        <img src="../img/bicicleta/nimbus2.jpg" alt="bicicleta bikcraft branca Nebula">
       </div>
       <div class="bicicleta-conteudo">
         <p class="font-2-l cor-5">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="comprar">
-          <a class="botao" href="../orcamento.html">COMPRAR AGORA</a>
+          <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=nebula">COMPRAR AGORA</a>
           <div class="span-info cor-6 font-1-xs">
             <span><img src="../img/icones/entrega.svg" alt="">entrega em 5 dias</span>
             <span><img src="../img/icones/estoque.svg" alt="">18 em estoque</span>
@@ -123,8 +125,8 @@
       <div class="seguro-conteudo">
         <h2 class="font-1-xxl cor-0">Pedale mais
           tranquilo com o nosso<span class="cor-p1"> seguro.</span></h2>
-          <p class="font-2-l cor-5">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
-          <a class="botao" href="../seguros.html">CONHEÇA MAIS</a>
+        <p class="font-2-l cor-5">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
+        <a class="botao" href="../seguros.html">CONHEÇA MAIS</a>
       </div>
     </div>
   </article>
@@ -160,6 +162,7 @@
       <p class="cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
