--- a/seguros.html
+++ b/seguros.html
@@ -186,7 +186,5 @@
   </footer>
   <script src="js/plugins/simple-anime.js"></script>
   <script src="./js/script.js"></script>
-  <script src="js/perguntas.js"></script>
-</body>
-
+  <script src="./js/perguntas.js"></script>
 </html>
